--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'start_page' %}">Главная <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Полученные пользователи</a>
+            <a class="nav-item nav-link" href="{% url 'all_user_page' %}">Полученные пользователи</a>
         </div>
     </nav>
 
