№4. Made the separation of hashes by number and letter

--- a/source/webapp/templates/user_page.html
+++ b/source/webapp/templates/user_page.html
@@ -4,6 +4,9 @@
     <p class="font-weight-bold mt-3">Имя - <span class="font-weight-normal">{{ user.first_name }}</span></p>
     <p class="font-weight-bold mt-3">Фамилие - <span class="font-weight-normal">{{ user.last_name }}</span></p>
     <p class="font-weight-bold mt-3">Почта - <span class="font-weight-normal">{{ user.email }}</span></p>
+    <p class="font-weight-bold mt-3">Разделённый хэш md5- <span class="font-weight-normal">{{ user.md5 }}</span></p>
+    <p class="font-weight-bold mt-3">Разделённый хэш sha1 - <span class="font-weight-normal">{{ user.sha1 }}</span></p>
+    <p class="font-weight-bold mt-3">Разделённый хэш sha256 - <span class="font-weight-normal">{{ user.sha256 }}</span></p>
     <div class="accordion" id="accordionExample">
         <div class="card">
             <button class="btn btn_outline_none btn-light"
