--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -6,19 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'start_page' %}">Главная <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="{% url 'all_user_page' %}">Полученные пользователи</a>
+            <a class="nav-item nav-link active" href="{% url 'all_user_page' %}">Полученные пользователи</a>
+            <a class="nav-item nav-link active" href="{% url 'get_api_link' %}">Перейти к API</a>
         </div>
     </nav>
-
 {% block content %}{% endblock %}
+{% block scripts %}{% endblock %}
 </div>
-</body>
 <div class="class mt-4"></div>
 </body>
 </html>
