--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -9,17 +9,19 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
-<body>
-<div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body style="background-color: lightgray">
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <div class="container">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="{% url 'start_page' %}">Главная <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="{% url 'start_page' %}">Главная <span
+                    class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="{% url 'all_user_page' %}">Полученные пользователи</a>
-            <a class="nav-item nav-link active" href="{% url 'get_api_link' %}">Перейти к API</a>
         </div>
-    </nav>
-{% block content %}{% endblock %}
-{% block scripts %}{% endblock %}
+    </div>
+</nav>
+<div class="container">
+    {% block content %}{% endblock %}
+    {% block scripts %}{% endblock %}
 </div>
 <div class="class mt-4"></div>
 </body>
