№9. Implemented a random user return

--- a/source/webapp/templates/user_page.html
+++ b/source/webapp/templates/user_page.html
@@ -4,6 +4,7 @@
     <p class="font-weight-bold mt-3">Имя - <span class="font-weight-normal">{{ user.first_name }}</span></p>
     <p class="font-weight-bold mt-3">Фамилие - <span class="font-weight-normal">{{ user.last_name }}</span></p>
     <p class="font-weight-bold mt-3">Почта - <span class="font-weight-normal">{{ user.email }}</span></p>
+    <p class="font-weight-bold mt-3">Город - <span class="font-weight-normal">{{ user.city }}</span></p><p class="font-weight-bold mt-3">Почта - <span class="font-weight-normal">{{ user.email }}</span></p>
     <p class="font-weight-bold mt-3">Разделённый хэш md5 - <span class="font-weight-normal">{{ user.md5 }}</span></p>
     <p class="font-weight-bold mt-3">Разделённый хэш sha1 - <span class="font-weight-normal">{{ user.sha1 }}</span>
     </p>
