--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -13,9 +13,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <div class="container">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="{% url 'start_page' %}">Главная <span
+            <a class="nav-item nav-link active m-2" href="{% url 'start_page' %}">Главная <span
                     class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" href="{% url 'all_user_page' %}">Полученные пользователи</a>
+            <a class="nav-item nav-link active m-2" href="{% url 'all_user_page' %}">Полученные пользователи</a>
+            <a class="nav-item nav-link active m-2" href="{% url 'instruction_page' %}">Описание функционирования
+                приложения</a>
         </div>
     </div>
 </nav>
