--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="text-center mt-5">
-        <a role="button" class="btn btn-outline-success w-auto text-center"
+        <a role="button" class="btn btn-outline-dark w-auto text-center"
            href="{% url 'get_user' %}">Получить случайного пользователя</a>
     </div>
 {% endblock %}
