№11. Made route a request for numbers from hashes

--- a/source/webapp/templates/user_page.html
+++ b/source/webapp/templates/user_page.html
@@ -5,11 +5,13 @@
     <p class="font-weight-bold mt-3">Фамилие - <span class="font-weight-normal">{{ user.last_name }}</span></p>
     <p class="font-weight-bold mt-3">Почта - <span class="font-weight-normal">{{ user.email }}</span></p>
     <p class="font-weight-bold mt-3">Город - <span class="font-weight-normal">{{ user.city }}</span></p>
-    <p class="font-weight-bold mt-3">Разделённый хэш md5 - <span class="font-weight-normal">{{ user.md5 }}</span></p>
-    <p class="font-weight-bold mt-3">Разделённый хэш sha1 - <span class="font-weight-normal">{{ user.sha1 }}</span>
+    <p class="font-weight-bold mt-3">Разделённый хэш md5 - <span
+            class="font-weight-normal">{{ user.md5_letter }} {{ user.md5 }}</span></p>
+    <p class="font-weight-bold mt-3">Разделённый хэш sha1 - <span
+            class="font-weight-normal">{{ user.sha1_letter }} {{ user.sha1 }}</span>
     </p>
     <p class="font-weight-bold mt-3">Разделённый хэш sha256 - <span
-            class="font-weight-normal">{{ user.sha256 }}</span>
+            class="font-weight-normal">{{ user.sha256_letter }} {{ user.sha256 }}</span>
     </p>
     <div id="accordion" class="accordion">
         <button type="button" class="btn bg-info btn-lg btn-block">
