--- a/source/webapp/templates/instruction.html
+++ b/source/webapp/templates/instruction.html
@@ -12,9 +12,10 @@
         пользователи" в навбаре<br/><br/>
     </p>
     <h5 class="text-center mt-3">API</h5>
-    Получить доступ к API можете по адресу "../hostname/user", где будет выведены все данные случайного пользователя
+    Получить доступ к API можете по адресу "../hostname/user/", где будут выведены все данные случайного пользователя
     из тех что имеются в базе.<br/><br/>
-    По адресу "../hostname/short" вы увидете краткую информацию случайного пользователя из тех что имеются в базе.<br/>
+    По адресу "../hostname/short/" вы увидете краткую информацию случайного пользователя из тех что имеются в базе.<br/>
     <br/>
-    По адресу "../hostname/numbers" вы увидете только цифры хешей случайного пользователя из тех что имеются в базе.<br/>
+    По адресу "../hostname/numbers/" вы увидете только цифры хешей случайного пользователя из тех что имеются в базе.
+    <br/>
 {% endblock %}
