№12. Added migrations'file and corrected instruction

--- a/source/webapp/templates/instruction.html
+++ b/source/webapp/templates/instruction.html
@@ -6,10 +6,12 @@
         пользователя". По нажатию будет получен и сохранён в базу данных случайный пользователь, а Вас перенаправит на
         страницу просмотра профиля полученного пользователя.<br/><br/>
         На странице просмотра пользователя будут выведены все необходимые данные пользователя, в числе которых будет
-        автоматически сгенерированная электронная почта и разделённые на числа и строки хэши. Все полученные данные
-        будут спрятаны под кнопкой "Все данные пользователя".<br/><br/>
-        Также вы можете посмотреть и перейти в профиль всех полученных пользователей кликнув на ссылку "Полученные
-        пользователи" в навбаре<br/><br/>
+        автоматически сгенерированная электронная почта и разделённые на числа и буквы хэши. В случае, если данные
+        приходят не на латинице они будут переводиться на английский язык модулем yandex-translater, так как его алфавит
+        полностью соответствует латинскому алфавиту. Однако, полагаю, что данный модуль вполне может не распознать
+        некоторые символы. Все полученные данные будут спрятаны под кнопкой "Все данные пользователя".<br/><br/>
+        Также вы можете посмотреть всех полученных пользователей кликнув на ссылку "Полученные пользователи" в
+        навбаре<br/><br/>
     </p>
     <h5 class="text-center mt-3">API</h5>
     Получить доступ к API можете по адресу "../hostname/user/", где будут выведены все данные случайного пользователя
