--- a/source/webapp/templates/instruction.html
+++ b/source/webapp/templates/instruction.html
@@ -14,6 +14,7 @@
         навбаре<br/><br/>
     </p>
     <h5 class="text-center mt-3">API</h5>
+    После получения пользователей перезагрузите сервер для корректного отображения данных в API
     Получить доступ к API можете по адресу "../hostname/user/", где будут выведены все данные случайного пользователя
     из тех что имеются в базе.<br/><br/>
     По адресу "../hostname/short/" вы увидете краткую информацию случайного пользователя из тех что имеются в базе.<br/>
